--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# AUTOCREATE TABLES
+spring.jpa.hibernate.ddl-auto = update
+
+#JWT
+jwt.secret=usersecret
