Feature: Security and Login.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 #JWT
-jwt.secret=usersecret
+security.jwt.expireTime=30
+security.jwt.secret=usersecret
